--- a/robolectric-shadows/shadows-core/pom.xml
+++ b/robolectric-shadows/shadows-core/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -126,7 +128,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
-          <classifier>${api}</classifier>
           <outputDirectory>dist</outputDirectory>
         </configuration>
       </plugin>
@@ -143,7 +144,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <configuration>
-          <classifier>${api}-sources</classifier>
           <outputDirectory>dist</outputDirectory>
         </configuration>
       </plugin>
@@ -152,7 +152,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <classifier>${api}-javadoc</classifier>
           <jarOutputDirectory>${basedir}/dist</jarOutputDirectory>
         </configuration>
       </plugin>
@@ -232,7 +231,11 @@
             <sourceDirectory>target/generated-shadows</sourceDirectory>
           </additionalSourceDirectories>
           <outputDirectory>target/generated-sources</outputDirectory>
-          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric</compilerArguments>
+          <compilerArguments>
+            -source ${maven.compiler.source}
+            -target ${maven.compiler.target}
+            -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric
+          </compilerArguments>
         </configuration>
         <executions>
           <execution>
@@ -256,13 +259,25 @@
   <profiles>
     <profile>
       <id>android-16</id>
-        <dependencies>
-            <dependency>
-                <groupId>org.robolectric</groupId>
-                <artifactId>android-all</artifactId>
-                <version>4.1.2_r1-robolectric-0</version>
-            </dependency>
-        </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <classifier>${api}</classifier>
+              <outputDirectory>dist</outputDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.robolectric</groupId>
+          <artifactId>android-all</artifactId>
+          <version>4.1.2_r1-robolectric-0</version>
+        </dependency>
+      </dependencies>
       <properties>
         <api>16</api>
       </properties>
@@ -270,13 +285,25 @@
 
     <profile>
       <id>android-17</id>
-        <dependencies>
-            <dependency>
-                <groupId>org.robolectric</groupId>
-                <artifactId>android-all</artifactId>
-                <version>4.2.2_r1.2-robolectric-0</version>
-            </dependency>
-        </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <classifier>${api}</classifier>
+              <outputDirectory>dist</outputDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.robolectric</groupId>
+          <artifactId>android-all</artifactId>
+          <version>4.2.2_r1.2-robolectric-0</version>
+        </dependency>
+      </dependencies>
       <properties>
         <api>17</api>
       </properties>
@@ -284,13 +311,25 @@
 
     <profile>
       <id>android-18</id>
-        <dependencies>
-            <dependency>
-                <groupId>org.robolectric</groupId>
-                <artifactId>android-all</artifactId>
-                <version>4.3_r2-robolectric-0</version>
-            </dependency>
-        </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <classifier>${api}</classifier>
+              <outputDirectory>dist</outputDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.robolectric</groupId>
+          <artifactId>android-all</artifactId>
+          <version>4.3_r2-robolectric-0</version>
+        </dependency>
+      </dependencies>
       <properties>
         <api>18</api>
       </properties>
@@ -298,13 +337,25 @@
 
     <profile>
       <id>android-19</id>
-        <dependencies>
-            <dependency>
-                <groupId>org.robolectric</groupId>
-                <artifactId>android-all</artifactId>
-                <version>4.4_r1-robolectric-0</version>
-            </dependency>
-        </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <classifier>${api}</classifier>
+              <outputDirectory>dist</outputDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.robolectric</groupId>
+          <artifactId>android-all</artifactId>
+          <version>4.4_r1-robolectric-0</version>
+        </dependency>
+      </dependencies>
       <properties>
         <api>19</api>
       </properties>
@@ -312,13 +363,50 @@
 
     <profile>
       <id>android-21</id>
-        <dependencies>
-            <dependency>
-                <groupId>org.robolectric</groupId>
-                <artifactId>android-all</artifactId>
-                <version>5.0.0_r2-robolectric-0</version>
-            </dependency>
-        </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <classifier>${api}</classifier>
+              <outputDirectory>dist</outputDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.robolectric</groupId>
+          <artifactId>android-all</artifactId>
+          <version>5.0.0_r2-robolectric-0</version>
+        </dependency>
+      </dependencies>
+      <properties>
+        <api>21</api>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>android-latest</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+              <outputDirectory>dist</outputDirectory>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.robolectric</groupId>
+          <artifactId>android-all</artifactId>
+          <version>5.0.0_r2-robolectric-0</version>
+        </dependency>
+      </dependencies>
       <properties>
         <api>21</api>
       </properties>
@@ -382,31 +470,11 @@
                       <type>jar</type>
                       <classifier>16</classifier>
                     </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-16-javadoc.jar</file>
-                      <type>jar</type>
-                      <classifier>16-javadoc</classifier>
-                    </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-16-sources.jar</file>
-                      <type>jar</type>
-                      <classifier>16-sources</classifier>
-                    </artifact>
 
                     <artifact>
                       <file>dist/shadows-core-3.0-SNAPSHOT-17.jar</file>
                       <type>jar</type>
                       <classifier>17</classifier>
-                    </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-17-javadoc.jar</file>
-                      <type>jar</type>
-                      <classifier>17-javadoc</classifier>
-                    </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-17-sources.jar</file>
-                      <type>jar</type>
-                      <classifier>17-sources</classifier>
                     </artifact>
 
                     <artifact>
@@ -414,31 +482,11 @@
                       <type>jar</type>
                       <classifier>18</classifier>
                     </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-18-javadoc.jar</file>
-                      <type>jar</type>
-                      <classifier>18-javadoc</classifier>
-                    </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-18-sources.jar</file>
-                      <type>jar</type>
-                      <classifier>18-sources</classifier>
-                    </artifact>
 
                     <artifact>
                       <file>dist/shadows-core-3.0-SNAPSHOT-19.jar</file>
                       <type>jar</type>
                       <classifier>19</classifier>
-                    </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-19-javadoc.jar</file>
-                      <type>jar</type>
-                      <classifier>19-javadoc</classifier>
-                    </artifact>
-                    <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-19-sources.jar</file>
-                      <type>jar</type>
-                      <classifier>19-sources</classifier>
                     </artifact>
 
                     <artifact>
@@ -446,15 +494,18 @@
                       <type>jar</type>
                       <classifier>21</classifier>
                     </artifact>
+
                     <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-21-javadoc.jar</file>
+                      <file>dist/shadows-core-3.0-SNAPSHOT.jar</file>
                       <type>jar</type>
-                      <classifier>21-javadoc</classifier>
                     </artifact>
                     <artifact>
-                      <file>dist/shadows-core-3.0-SNAPSHOT-21-sources.jar</file>
+                      <file>dist/shadows-core-3.0-SNAPSHOT-javadoc.jar</file>
                       <type>jar</type>
-                      <classifier>21-sources</classifier>
+                    </artifact>
+                    <artifact>
+                      <file>dist/shadows-core-3.0-SNAPSHOT-sources.jar</file>
+                      <type>jar</type>
                     </artifact>
                   </artifacts>
                 </configuration>
