--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.robolectric</groupId>
   <artifactId>robolectric-parent</artifactId>
-  <version>3.0-SNAPSHOT</version>
+  <version>3.0-rc2</version>
   <packaging>pom</packaging>
   <description>An alternative Android testing framework.</description>
   <url>http://robolectric.org/</url>
