--- a/robolectric-utils/pom.xml
+++ b/robolectric-utils/pom.xml
@@ -24,7 +24,25 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- Project Dependencies -->
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>5.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>5.0.1</version>
+    </dependency>
+
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>android-all</artifactId>
