XML formatting tweaks.

--- a/robolectric-shadows/shadows-httpclient/pom.xml
+++ b/robolectric-shadows/shadows-httpclient/pom.xml
@@ -74,9 +74,7 @@
             <sourceDirectory>target/generated-shadows</sourceDirectory>
           </additionalSourceDirectories>
           <outputDirectory>target/generated-sources</outputDirectory>
-          <compilerArguments>
-            -source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric.httpclient
-          </compilerArguments>
+          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric.httpclient</compilerArguments>
         </configuration>
         <executions>
           <execution>
