--- a/robolectric-shadows/shadows-core/pom.xml
+++ b/robolectric-shadows/shadows-core/pom.xml
@@ -229,11 +229,7 @@
             <sourceDirectory>target/generated-shadows</sourceDirectory>
           </additionalSourceDirectories>
           <outputDirectory>target/generated-sources</outputDirectory>
-          <compilerArguments>
-            -source ${maven.compiler.source}
-            -target ${maven.compiler.target}
-            -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric
-          </compilerArguments>
+          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric</compilerArguments>
         </configuration>
         <executions>
           <execution>
