--- a/robolectric/pom.xml
+++ b/robolectric/pom.xml
@@ -153,5 +153,12 @@
         <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
     </plugins>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
   </build>
 </project>
