--- a/robolectric-shadows/shadows-multidex/pom.xml
+++ b/robolectric-shadows/shadows-multidex/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-shadows</artifactId>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.0-rc3</version>
   </parent>
 
   <artifactId>shadows-multidex</artifactId>
