Move classes to package org.robolectric.shadows.gms.

--- a/robolectric-shadows/shadows-play-services/pom.xml
+++ b/robolectric-shadows/shadows-play-services/pom.xml
@@ -71,7 +71,7 @@
             <sourceDirectory>target/generated-shadows</sourceDirectory>
           </additionalSourceDirectories>
           <outputDirectory>target/generated-sources</outputDirectory>
-          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric.gms</compilerArguments>
+          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric.shadows.gms</compilerArguments>
         </configuration>
         <executions>
           <execution>
