--- a/robolectric-shadows/shadows-maps/pom.xml
+++ b/robolectric-shadows/shadows-maps/pom.xml
@@ -82,7 +82,7 @@
             <sourceDirectory>target/generated-shadows</sourceDirectory>
           </additionalSourceDirectories>
           <outputDirectory>target/generated-sources</outputDirectory>
-          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric.maps</compilerArguments>
+          <compilerArguments>-source ${maven.compiler.source} -target ${maven.compiler.target} -Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric.shadows.maps</compilerArguments>
         </configuration>
         <executions>
           <execution>
