--- a/robolectric-processor/pom.xml
+++ b/robolectric-processor/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-parent</artifactId>
-    <version>3.0</version>
+    <version>3.1-SNAPSHOT</version>
   </parent>
   
   <artifactId>robolectric-processor</artifactId>
