Add skeleton project for appcompat-v7 add-on library.

--- a/robolectric-shadows/pom.xml
+++ b/robolectric-shadows/pom.xml
@@ -17,6 +17,7 @@
     <module>shadows-multidex</module>
     <module>shadows-support-v4</module>
     <module>shadows-httpclient</module>
+    <module>shadows-appcompat-v7</module>
     <module>shadows-play-services</module>
   </modules>
 </project>
