--- a/robolectric-resources/pom.xml
+++ b/robolectric-resources/pom.xml
@@ -50,6 +50,7 @@
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>android-all</artifactId>
+      <version>5.0.0_r2-robolectric-1</version>
     </dependency>
   </dependencies>
 
