--- a/robolectric-shadows/shadows-httpclient/pom.xml
+++ b/robolectric-shadows/shadows-httpclient/pom.xml
@@ -46,6 +46,7 @@
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>android-all</artifactId>
+      <version>5.0.0_r2-robolectric-1</version>
     </dependency>
   </dependencies>
 
