--- a/robolectric-shadows/shadows-maps/pom.xml
+++ b/robolectric-shadows/shadows-maps/pom.xml
@@ -34,12 +34,26 @@
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>robolectric</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.robolectric</groupId>
+          <artifactId>layoutlib</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>shadows-core</artifactId>
       <scope>provided</scope>
+      <version>3.1-SNAPSHOT</version>
+      <classifier>19</classifier>
+      <exclusions>
+        <exclusion>
+          <groupId>org.robolectric</groupId>
+          <artifactId>layoutlib</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- Project Dependencies -->
@@ -47,6 +61,7 @@
       <groupId>org.robolectric</groupId>
       <artifactId>android-all</artifactId>
       <scope>provided</scope>
+      <version>4.4_r1-robolectric-0</version>
     </dependency>
 
     <dependency>
