--- a/robolectric-shadows/shadows-multidex/pom.xml
+++ b/robolectric-shadows/shadows-multidex/pom.xml
@@ -21,6 +21,7 @@
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>android-all</artifactId>
+      <version>5.0.0_r2-robolectric-1</version>
       <scope>provided</scope>
     </dependency>
 
