--- a/robolectric/pom.xml
+++ b/robolectric/pom.xml
@@ -132,7 +132,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=512m</argLine>
+          <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
         </configuration>
       </plugin>
 
