--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,20 @@
     <module>robolectric-utils</module>
   </modules>
 
+  <!-- TODO: Remove when finalized -->
+  <repositories>
+    <repository>
+      <id>robolectric-staging</id>
+      <url>https://oss.sonatype.org/content/repositories/orgrobolectric-1065</url>
+    </repository>
+  </repositories>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <libsqlite.version>0.282-3</libsqlite.version>
-    <robolectric.api.level>22</robolectric.api.level>
+    <robolectric.api.level>23</robolectric.api.level>
   </properties>
 
   <dependencyManagement>
@@ -89,7 +97,7 @@
       <dependency>
         <groupId>org.robolectric</groupId>
         <artifactId>android-all</artifactId>
-        <version>5.1.1_r9-robolectric-0</version>
+        <version>6.0.0_r1-robolectric-0</version>
         <scope>provided</scope>
       </dependency>
 
