Improve handling of ordered broadcasts
In fixing the attached issues, I had to change around the
implementation of ordered broadcasts. This fixed a few other issues -
ordered broadcasts sent to receivers with custom schedulers now execute
serially, and they propagate results along with them.

Fixes #2112
Fixes #1973

--- a/robolectric-shadows/shadows-core/pom.xml
+++ b/robolectric-shadows/shadows-core/pom.xml
@@ -54,6 +54,12 @@
       <version>53.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>16.0.1</version>
+    </dependency>
+
     <!-- SQLite Dependencies -->
     <dependency>
       <groupId>com.almworks.sqlite4java</groupId>
