--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>16.0.1</version>
+        <version>19.0-rc2</version>
       </dependency>
 
       <dependency>
