--- a/robolectric-shadows/shadows-support-v4/pom.xml
+++ b/robolectric-shadows/shadows-support-v4/pom.xml
@@ -35,7 +35,7 @@
       <groupId>org.robolectric</groupId>
       <artifactId>android-all</artifactId>
       <scope>provided</scope>
-      <version>5.1.1_r9-robolectric-0</version>
+      <version>6.0.0_r1-robolectric-0-render</version>
     </dependency>
 
     <dependency>
