--- a/robolectric-shadows/shadows-play-services/pom.xml
+++ b/robolectric-shadows/shadows-play-services/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-shadows</artifactId>
-    <version>3.1-SNAPSHOT</version>
+    <version>3.1-rc1</version>
   </parent>
 
   <artifactId>shadows-play-services</artifactId>
