--- a/pom.xml
+++ b/pom.xml
@@ -167,11 +167,12 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.13</version>
           <configuration>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <includes>
               <include>**/*Test.java</include>
             </includes>
             <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-            <runOrder>random</runOrder>
+            <runOrder>alphabetical</runOrder>
             <systemProperties>
               <java.awt.headless>true</java.awt.headless>
             </systemProperties>
