--- a/robolectric-resources/pom.xml
+++ b/robolectric-resources/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.robolectric</groupId>
     <artifactId>robolectric-parent</artifactId>
-    <version>3.1</version>
+    <version>3.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>robolectric-resources</artifactId>
