--- a/robolectric-annotations/build.gradle
+++ b/robolectric-annotations/build.gradle
@@ -1,15 +1,7 @@
-apply plugin: "java"
-
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
+apply plugin: ProvidedPlugin
 
 dependencies {
     // Compile dependencies
     compile "com.intellij:annotations:12.0"
-    compile "org.robolectric:android-all:5.0.0_r2-robolectric-0"
+    provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
 }
