--- a/robolectric-processor/build.gradle
+++ b/robolectric-processor/build.gradle
@@ -1,23 +1,14 @@
-apply plugin: "java"
-
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
 dependencies {
     // Project dependencies
     compile project(":robolectric-annotations")
 
     // Compile dependencies
-    compile "com.google.guava:guava:17.0"
+    compile "com.google.guava:guava:19.0-rc2"
     compile "com.intellij:annotations:12.0"
     compile files("${System.properties['java.home']}/../lib/tools.jar")
 
     // Testing dependencies
-    testCompile "junit:junit-dep:4.8.2"
+    testCompile "junit:junit:4.8.2"
+    testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "com.google.testing.compile:compile-testing:0.6"
 }
