--- a/robolectric-resources/build.gradle
+++ b/robolectric-resources/build.gradle
@@ -1,12 +1,4 @@
-apply plugin: "java"
-
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
+apply plugin: ProvidedPlugin
 
 dependencies {
     // Project dependencies
@@ -15,11 +7,12 @@ dependencies {
 
     // Compile dependencies
     compile "com.ximpleware:vtd-xml:2.11"
-    compile "com.google.guava:guava:17.0"
-    compile "org.robolectric:android-all:5.0.0_r2-robolectric-0"
+    compile "com.google.guava:guava:19.0-rc2"
+    provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
 
     // Testing dependencies
-    testCompile "junit:junit-dep:4.8.2"
-    testCompile "org.assertj:assertj-core:1.7.0"
+    testCompile "junit:junit:4.8.2"
+    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "com.google.testing.compile:compile-testing:0.6"
 }
