--- a/robolectric-shadows/shadows-core/build.gradle
+++ b/robolectric-shadows/shadows-core/build.gradle
@@ -1,47 +1,22 @@
-apply plugin: "java"
+apply plugin: ProvidedPlugin
 
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
+def androidApi = hasProperty("androidApi") ? ext.androidApi.toInteger() : AndroidSdk.latestVersion
+def robolectricVersion = AndroidSdk.versions[androidApi]
+logger.info "Android API: $androidApi — $robolectricVersion"
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
-configurations {
-    shadows
-}
-
-task generateShadows(type: JavaCompile, description: "Generate shadow classes") {
-    source = sourceSets.main.java
-    classpath = configurations.compile + configurations.shadows
-    options.compilerArgs = [
-            "-proc:only",
-            "-processor", "org.robolectric.annotation.processing.RoboProcessor",
-            "-Aorg.robolectric.annotation.processing.shadowPackage=org.robolectric"
-    ]
-    destinationDir = file("$buildDir/generated-shadows")
-}
-
-compileJava {
-    dependsOn generateShadows
-    source file("$buildDir/generated-shadows")
-}
+compileJava.onlyIf { false }
 
 dependencies {
     // Project dependencies
-    compile project(":robolectric")
-    compile project(":robolectric-utils")
-    compile project(":robolectric-resources")
     compile project(":robolectric-annotations")
-
-    // Run the annotation processor
-    shadows project(":robolectric-processor")
+    compile project(":robolectric-resources")
+    compile project(":robolectric-utils")
 
     // Compile dependencies
     compile "com.intellij:annotations:12.0"
     compile "com.almworks.sqlite4java:sqlite4java:0.282"
-    compile "org.robolectric:android-all:5.0.0_r2-robolectric-0"
+    provided("org.robolectric:android-all:$robolectricVersion") { force = true }
+    compile "com.ibm.icu:icu4j:53.1"
 
     runtime "com.github.axet.litedb:libsqlite:0.282-3:natives-mac-x86_64"
     runtime "com.github.axet.litedb:libsqlite:0.282-3:natives-linux-x86"
@@ -50,6 +25,7 @@ dependencies {
     runtime "com.github.axet.litedb:libsqlite:0.282-3:natives-windows-x86_64"
 
     // Testing dependencies
-    testCompile "junit:junit-dep:4.8.2"
-    testCompile "org.assertj:assertj-core:1.7.0"
+    testCompile "junit:junit:4.8.2"
+    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "org.assertj:assertj-core:2.0.0"
 }
