--- a/robolectric-shadows/shadows-multidex/build.gradle
+++ b/robolectric-shadows/shadows-multidex/build.gradle
@@ -2,20 +2,19 @@ apply plugin: ProvidedPlugin
 apply plugin: ShadowsPlugin
 
 shadows {
-    packageName "org.robolectric.shadows.maps"
+    packageName "org.robolectric.shadows.multidex"
 }
 
 dependencies {
     compile project(":robolectric")
     compile project(":robolectric-shadows/shadows-core/v23")
 
+    compile "com.android.support:multidex:1.0.1"
+
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
-    compile "com.ibm.icu:icu4j:53.1"
 
-    compile "com.google.android.maps:maps:23_r1"
-
+    // Testing dependencies
     testCompile "junit:junit:4.8.2"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
-    testCompile "org.mockito:mockito-core:1.8.0"
 }
