--- a/robolectric-shadows/shadows-play-services/build.gradle
+++ b/robolectric-shadows/shadows-play-services/build.gradle
@@ -2,18 +2,20 @@ apply plugin: ProvidedPlugin
 apply plugin: ShadowsPlugin
 
 shadows {
-    packageName "org.robolectric.shadows.maps"
+    packageName "org.robolectric.shadows.gms"
 }
 
 dependencies {
     compile project(":robolectric")
     compile project(":robolectric-shadows/shadows-core/v23")
 
+    compile "com.android.support:support-v4:23.2.0"
+    compile "com.google.android.gms:play-services-base:8.4.0"
+    compile "com.google.android.gms:play-services-basement:8.4.0"
+
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
-    compile "com.ibm.icu:icu4j:53.1"
 
-    compile "com.google.android.maps:maps:23_r1"
-
+    // Testing dependencies
     testCompile "junit:junit:4.8.2"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
