--- a/robolectric-utils/build.gradle
+++ b/robolectric-utils/build.gradle
@@ -1,18 +1,17 @@
-apply plugin: "java"
-
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
+apply plugin: ProvidedPlugin
 
 dependencies {
     // Compile dependencies
-    compile "junit:junit-dep:4.8.2"
-    compile "org.robolectric:android-all:5.0.0_r2-robolectric-0"
+    compile "junit:junit:4.8.2"
+    compile "org.hamcrest:hamcrest-core:1.3"
+    provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+
+    compile "org.ow2.asm:asm:5.0.1"
+    compile "org.ow2.asm:asm-commons:5.0.1"
+    compile project(":robolectric-annotations")
+    compile "com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework:2.1"
 
     // Testing dependencies
-    testCompile "org.assertj:assertj-core:1.7.0"
+    testCompile "org.assertj:assertj-core:2.0.0"
+    testCompile "org.mockito:mockito-core:1.9.5"
 }
