--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -1,18 +1,20 @@
-apply plugin: "java"
+apply plugin: ProvidedPlugin
 
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
-repositories {
-    mavenLocal()
-    mavenCentral()
+processResources {
+    filesMatching("**/robolectric-version.properties") {
+        filter { String line ->
+            return line.replaceAll(/\$\{project.version\}/, project.version)
+        }
+    }
 }
 
 dependencies {
     // Project dependencies
-    compile project(":robolectric-utils")
-    compile project(":robolectric-resources")
     compile project(":robolectric-annotations")
+    compile project(":robolectric-resources")
+    compile project(":robolectric-utils")
+    compileOnly project(":robolectric-shadows/shadows-core/v23")
+    runtime project(":robolectric-shadows/shadows-core/v23")
 
     // Compile dependencies
     compile "org.ow2.asm:asm:5.0.1"
@@ -20,17 +22,19 @@ dependencies {
     compile "org.ow2.asm:asm-commons:5.0.1"
     compile "org.ow2.asm:asm-analysis:5.0.1"
 
+    compile "org.bouncycastle:bcprov-jdk16:1.46"
     compile "com.ximpleware:vtd-xml:2.11"
+    compile "com.thoughtworks.xstream:xstream:1.4.8"
     compile "com.intellij:annotations:12.0"
-    compile "commons-codec:commons-codec:1.3"
-    compile "commons-logging:commons-logging:1.1.1"
 
     compile "org.apache.ant:ant:1.8.0"
     compile "org.apache.maven:maven-ant-tasks:2.1.3"
-    compile "org.robolectric:android-all:5.0.0_r2-robolectric-0"
+    provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
 
     // Testing dependencies
-    testCompile "junit:junit-dep:4.8.2"
-    testCompile "org.assertj:assertj-core:1.7.0"
+    testCompile "junit:junit:4.8.2"
+    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:1.8.0"
+    testCompile project(":robolectric-shadows/shadows-core/v23")
 }
