--- a/robolectric-annotations/build.gradle
+++ b/robolectric-annotations/build.gradle
@@ -1,7 +1,5 @@
-apply plugin: ProvidedPlugin
-
 dependencies {
     // Compile dependencies
-    compile "com.intellij:annotations:12.0"
+    provided "com.intellij:annotations:12.0"
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
 }
