--- a/robolectric-processor/build.gradle
+++ b/robolectric-processor/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 
     // Compile dependencies
     compile "com.google.guava:guava:19.0-rc2"
-    compile "com.intellij:annotations:12.0"
+    provided "com.intellij:annotations:12.0"
     compile files("${System.properties['java.home']}/../lib/tools.jar")
 
     // Testing dependencies
