--- a/robolectric-resources/build.gradle
+++ b/robolectric-resources/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: ProvidedPlugin
-
 dependencies {
     // Project dependencies
     compile project(":robolectric-utils")
@@ -9,6 +7,7 @@ dependencies {
     compile "com.ximpleware:vtd-xml:2.11"
     compile "com.google.guava:guava:19.0-rc2"
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    provided "com.intellij:annotations:12.0"
 
     // Testing dependencies
     testCompile "junit:junit:4.8.2"
