--- a/robolectric-shadows/shadows-core/build.gradle
+++ b/robolectric-shadows/shadows-core/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: ProvidedPlugin
-
 def androidApi = hasProperty("androidApi") ? ext.androidApi.toInteger() : AndroidSdk.latestVersion
 def robolectricVersion = AndroidSdk.versions[androidApi]
 logger.info "Android API: $androidApi — $robolectricVersion"
@@ -13,7 +11,7 @@ dependencies {
     compile project(":robolectric-utils")
 
     // Compile dependencies
-    compile "com.intellij:annotations:12.0"
+    provided "com.intellij:annotations:12.0"
     compile "com.almworks.sqlite4java:sqlite4java:0.282"
     provided("org.robolectric:android-all:$robolectricVersion") { force = true }
     compile "com.ibm.icu:icu4j:53.1"
