--- a/robolectric-utils/build.gradle
+++ b/robolectric-utils/build.gradle
@@ -1,9 +1,7 @@
-apply plugin: ProvidedPlugin
-
 dependencies {
     // Compile dependencies
-    compile "junit:junit:4.8.2"
-    compile "org.hamcrest:hamcrest-core:1.3"
+    provided "junit:junit:4.8.2"
+    provided "org.hamcrest:hamcrest-core:1.3"
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
 
     compile "org.ow2.asm:asm:5.0.1"
