--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: ProvidedPlugin
-
 processResources {
     filesMatching("**/robolectric-version.properties") {
         filter { String line ->
@@ -25,11 +23,12 @@ dependencies {
     compile "org.bouncycastle:bcprov-jdk16:1.46"
     compile "com.ximpleware:vtd-xml:2.11"
     compile "com.thoughtworks.xstream:xstream:1.4.8"
-    compile "com.intellij:annotations:12.0"
+    provided "com.intellij:annotations:12.0"
 
     compile "org.apache.ant:ant:1.8.0"
     compile "org.apache.maven:maven-ant-tasks:2.1.3"
     provided "org.robolectric:android-all:6.0.0_r1-robolectric-0"
+    provided "junit:junit:4.8.2"
 
     // Testing dependencies
     testCompile "junit:junit:4.8.2"
