Publish sources artifact.

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ allprojects {
     apply plugin: ProvidedPlugin
     apply plugin: "maven-publish"
 
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier 'sources'
+        from sourceSets.main.allJava
+    }
+
     publishing {
         publications {
             maven(MavenPublication) {
@@ -22,6 +27,7 @@ allprojects {
                 }
 
                 from components.java
+                artifact sourcesJar
             }
         }
     }
