Fix `shadows-core-v23`'s missing JNI libs.

--- a/build.gradle
+++ b/build.gradle
@@ -137,7 +137,7 @@ configure(subprojects.findAll { project -> project.name =~ subshadowRE }) {
         }
     }
 
-    assemble {
+    jar {
         dependsOn copyNatives
     }
 }
