--- a/robolectric/build.gradle
+++ b/robolectric/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     provided "junit:junit:4.8.2"
 
     // Testing dependencies
+    testCompile project(":app-under-test")
     testCompile "junit:junit:4.8.2"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile "org.assertj:assertj-core:2.0.0"
